# PUT-OK

./: CMakeLists.txt  Employ.cpp  Employ.hpp  Exceptions.hpp  Instance.cpp  Instance.hpp  InstanceGenerator.cpp  InstanceGenerator.hpp  Machine.cpp  Machine.hpp  Maintenance.cpp  Maintenance.hpp  Maitenance.cpp  Maitenance.hpp  Operation.cpp  Operation.hpp  Solution.cpp  Solution.hpp  SolutionsPool.cpp  SolutionsPool.hpp  Sprawozdanie.odt  Task.cpp  Task.hpp  main.cpp  tuning.hpp
